<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tela_default"
    tools:context=".Tela_Registrar_Notas">

    <TextView
        android:id="@+id/textView"
        android:text="@string/titulo_Dia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/voltar_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.139"
        style="@style/title_meu" />

    <EditText
        android:id="@+id/nome_aluno"
        style="@style/input_texte_MEUST"
        android:hint="@string/nome_aluno"
        android:linksClickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.515" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="315dp"
        android:layout_height="78dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.665">

        <EditText
            android:id="@+id/nota1"
            style="@style/Input_Notas1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/n1" />

        <EditText
            android:id="@+id/nota2"
            style="@style/Input_Notas1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/n2"
            android:inputType="number" />

        <EditText
            android:id="@+id/nota3"
            style="@style/Input_Notas1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/n3"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:id="@+id/voltar_menu"
        style="@style/Botao_voltar"
        android:text="@string/voltar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/button_showRegistros"
        android:hint="@string/botão_tela_lista"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272"
        style="@style/Butao_default_ex" />

    <Button
        android:id="@+id/button_registrar"
        style="@style/Butao_default_ex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/botão_registrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>